# acpi-nostd

./: CHANGELOG.md  Cargo.toml  README.md
src/: fadt.rs  lib.rs  power.rs  sdt.rs
